Fix z-index issue.

--- a/src/main/resources/scss/layout/_main-layout.scss
+++ b/src/main/resources/scss/layout/_main-layout.scss
@@ -16,7 +16,7 @@ html.x-viewport {
 
 		.prompt-layer {
 			display: block;
-			z-index: 20001;
+			z-index: 999;
 		}
 	}
 
